--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
           <li><a href="#project">Projetos</a></li>
           <div class="contact-default">
             <a href="https://www.linkedin.com/in/eric-f-maia/">
-              <img src="/assets/icon-linkedin.svg" alt="linkedin icon" />
+              <img src="./assets/icon-linkedin.svg" alt="linkedin icon" />
             </a>
             <a href="https://github.com/EricFMaia">
-              <img src="/assets/icon-github.svg" alt="github icon" />
+              <img src="./assets/icon-github.svg" alt="github icon" />
             </a>
           </div>
         </ul>
