--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         <div class="menu-mobile">
           <div class="contact-default">
             <a href="https://www.linkedin.com/in/eric-f-maia/">
-              <img src="/assets/icon-linkedin.svg" alt="linkedin icon" />
+              <img src="./assets/icon-linkedin.svg" alt="linkedin icon" />
             </a>
             <a href="https://github.com/EricFMaia">
-              <img src="/assets/icon-github.svg" alt="github icon" />
+              <img src="./assets/icon-github.svg" alt="github icon" />
             </a>
           </div>
           <div class="menu-mobile__hamburger">
             <img
               class="menu-mobile__icon"
-              src="/assets/icon-menuMobile.svg"
+              src="./assets/icon-menuMobile.svg"
               alt="Menu Mobile icon"
             />
           </div>
@@ -54,15 +54,15 @@
     </header>
     <div id="menuMobile_popUp" class="menu-mobile__hamburger-PopUp">
       <a href="#start" class="menu-mobile__PopUp__btn">
-        <img src="/assets/icon _home.png" alt="house icon" />
+        <img src="./assets/icon _home.png" alt="house icon" />
         <h2>Inicio</h2>
       </a>
       <a href="#aboutMe" class="menu-mobile__PopUp__btn">
-        <img src="/assets/icon _person.png" alt="person icon" />
+        <img src="./assets/icon _person.png" alt="person icon" />
         <h2>Sobre Mim</h2>
       </a>
       <a href="#project" class="menu-mobile__PopUp__btn">
-        <img src="/assets/icon _file.png" alt="file icon" />
+        <img src="./assets/icon _file.png" alt="file icon" />
         <h2>Projetos</h2>
       </a>
     </div>
@@ -93,12 +93,12 @@
         <div class="aboutme__gears hiddenContent">
           <img
             class="aboutme__small-gear"
-            src="/assets/Vector.svg"
+            src="./assets/Vector.svg"
             alt="engrenagem pequena rodando para esqueda"
           />
           <img
             class="aboutme__big-gear"
-            src="/assets/Group 1.svg"
+            src="./assets/Group 1.svg"
             alt="engrenagem grande rodando para a direita"
           />
           <span class="aboutme__gears__animation animation-1">HTML</span>
@@ -109,19 +109,19 @@
       <section class="Skills">
         <div class="Skills__card-container hiddenContent">
           <div class="skills__card">
-            <img src="/assets/icons-html.png" alt="html icon" />
+            <img src="./assets/icons-html.png" alt="html icon" />
             <h3>HTML</h3>
           </div>
           <div class="skills__card">
-            <img src="/assets/icons-css.png" alt="css icon" />
+            <img src="./assets/icons-css.png" alt="css icon" />
             <h3>CSS</h3>
           </div>
           <div class="skills__card">
-            <img src="/assets/icons-js.png" alt="javascript incon" />
+            <img src="./assets/icons-js.png" alt="javascript incon" />
             <h3>JAVASCRIPT</h3>
           </div>
           <div class="skills__card">
-            <img src="/assets/icons-ts.png" alt="typescript icon" />
+            <img src="./assets/icons-ts.png" alt="typescript icon" />
             <h3>TYPESCRIPT</h3>
           </div>
         </div>
@@ -147,7 +147,7 @@
             >
               <div class="arrow arrow-left">
                 <img
-                  src="/assets/icon-arrowhead.png"
+                  src="./assets/icon-arrowhead.png"
                   alt="arrowhead to slide"
                 />
               </div>
@@ -164,7 +164,7 @@
             >
               <div class="arrow arrow-right">
                 <img
-                  src="/assets/icon-arrowhead.png"
+                  src="./assets/icon-arrowhead.png"
                   alt="arrowhead to slide"
                 />
               </div>
