--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
           </p>
         </div>
         <div class="projects__card-container hiddenContent">
-            <a href="#project" id="card1" class="projects__cards card-1"></a>
-            <a href="#project" id="card2" class="projects__cards card-2"></a>
-            <a href="#project" id="card3" class="projects__cards card-3"></a>
-            <a href="#project" id="card4" class="projects__cards card-4"></a>
+            <a href="" id="card1" class="projects__cards card-1"></a>
+            <a href="" id="card2" class="projects__cards card-2"></a>
+            <a href="" id="card3" class="projects__cards card-3"></a>
+            <a href="" id="card4" class="projects__cards card-4"></a>
           
           <div class="project-mobile__conteiner-btns-slide">
             <div
